--- a/main.tex
+++ b/main.tex
@@ -72,6 +72,10 @@
 \pagenumbering{arabic}
 
 \include{01}  % 本文1
+\include{02}
+\include{03}
+\include{04}
+\include{05}
 
 \include{90_acknowledgment}  % 謝辞。要独自コマンド、include先参照のこと
 \include{91_bibliography}  % 参考文献。要独自コマンド、include先参照のこと
