--- a/01.tex
+++ b/01.tex
@@ -23,7 +23,7 @@
 LINEではボイスメッセージ機能が利用でき，簡単さとテキストにはない表現力の豊かさから，一部のユーザーは積極的に活用している．
 長時間の録音でも，始めてしまえば記録に集中する必要がないので，同時に別のことを行える．
 これはテキストや写真，動画による記録とは異なる点である．また，写真や文章といった他のメディアとの組み合わせによって，
-互いの内容理解を助ける相互補完性の存在が知られている．(参考文献)MP3などの音声圧縮技術が発達していることから，
+互いの内容理解を助ける相互補完性の存在が知られている\cite{Nakakura}．MP3などの音声圧縮技術が発達していることから，
 データ量を気にせずこういった活用ができるはずである．
 すでに様々な活用が知られている音声だが，なぜ日常的に利用されていないのか．
 
