--- a/main.bib
+++ b/main.bib
@@ -17,7 +17,7 @@ keywords = {aesthetic computing., ambient ui, context-aware interfaces, embodied
 }
 
 @article{Kawamura,
-author="河村, 竜幸 and 中西, 英之 and 石黒, 浩",
+author="河村 竜幸 and 中西 英之 and 石黒 浩",
 title="連続音声録音を用いた会話体験の探索",
 journal="人工知能学会全国大会論文集",
 ISSN="1347-9881",
@@ -68,7 +68,7 @@ keywords = {acoustic structuring, audio, paper, pen interaction, speech, speech 
 }
 
 @article{Kawanishi,
-author="川西康介 and 大平茂輝 and 松原茂樹 and 長尾確",
+author="川西 康介 and 大平 茂輝 and 松原 茂樹 and 長尾 確",
 title="研究活動における音声ログの整理と利用",
 journal="第74回全国大会講演論文集",
 ISSN="",
@@ -91,12 +91,16 @@ howpublished = "\url{http://recture.com/}"
 @inproceedings{Vemuri,
   title={An Audio-Based Personal Memory Aid},
   author={Sunil Vemuri and Chris Schmandt and Walter Bender and Stefanie Tellex and Brad Lassey},
-  booktitle={UbiComp},
+  booktitle={UbiComp 2004: Ubiquitous Computing},
+  series = {Lecture Notes in Computer Science},
+  volume = {3205},
+  pages = {400–-417},
+  publisher = {Springer},
   year={2004}
 }
 
 @article{Nakakura,
-author="中蔵, 聡哉 and 角, 康之 and 西田, 豊明",
+author="中蔵 聡哉 and 角 康之 and 西田 豊明",
 title="体験記録システムにおける写真撮影と音声録音の相互補完性",
 journal="人工知能学会全国大会論文集",
 ISSN="",
