--- a/main.tex
+++ b/main.tex
@@ -45,13 +45,13 @@
 
 % 日本語情報（必要なら）
 \jclass  {卒業論文}                             % 論文種別
-\jtitle    {Gyaon}    % タイトル。改行する場合は\\を入れる
+\jtitle    {Gyaon \\ 音声活用の幅を広げる録音/共有システム}    % タイトル。改行する場合は\\を入れる
 \juniv    {慶應義塾大学}                  % 大学名
 \jfaculty  {環境情報学部}               % 学部、学科
 \jauthor  {佐竹 紘明}                       % 著者
 \jhyear  {28}                                   % 平成○年度
 \jsyear  {2016}                                 % 西暦○年度
-\jkeyword  {音声, 録音}     % 論文のキーワード
+\jkeyword  {音声, 録音, インターフェース}     % 論文のキーワード
 \jproject{増井俊之研究会} %プロジェクト名
 \jdate{2017年1月}
 
