章立てを変更

--- a/01.tex
+++ b/01.tex
@@ -7,7 +7,7 @@
 
 \section{背景}
 
-録音が可能な各種の小型レコーダ装置は古くから販売されており，またスマートフォンでは様々な音声録音アプリを利用できる．
+録音が可能な各種の小型レコーダ装置は古くから販売されており，またスマートフォンでは様々な録音アプリケーションを利用できる．
 これらは音楽に携わる人やインタビュー・会議を記録するといった用途に重宝されるが，
 日常的にメモを記録するなどして活用している人は少ない．
 音声といえば，最近はSiriやAmazon echoといった音声入力システムが普及している．
