--- a/02.tex
+++ b/02.tex
@@ -1,60 +1,14 @@
 \chapter{システムの提案}
 \label{chap:proposal}
 
-本章では，音声利用についての背景を踏まえ、関連研究を概観し、新しい録音システム「Gyaon」を提案する。
+本章では，音声利用についての背景を踏まえ，関連研究を概観し，新しい録音システム「Gyaon」を提案する．
 
 \newpage
 
-\section{関連研究およびアプリケーション}
+\section{設計指針}
 
-\subsection{雰囲気の記録}
+本研究の目的を踏まえ、「Gyaon」では
 
-日常的な体験や雰囲気を記録するための録音デバイスについて研究が行われている\cite{Poupyrev}。
-録音は何かを記録、説明したり、思い出すのに重要な手段だが、日常的に行っている人は少ないと指摘されている。
-より気軽に録音できるよう日用品にセンサーを埋め込み、状況の変化に応じて録音/再生するデバイスが提案されている。
-日用品に溶け込み、単純明快な録音/再生インターフェースが実現されているが、
-本を閉じる/開くといった二値的な状況変化でしか操作できないため、
-デバイス単体で複数の音声を管理することが困難になっている。
-
-\subsection{長時間音声データの管理}
-
-長時間にわたる音声データでは、聞き返したい箇所を効率良く見つけることが困難となる。
-この課題に対して、音声データのブラウジングやタグ付けの手法について研究が行われている。
-
-\paragraph*{ブラウジング}
-
-人間生活に関わる情報を長期間にわたり記録するライフログ関連研究では、
-そのログの一部として音声データがよく利用されている\cite{Bell}。
-音声データの特徴量を計算し,閾値処理するインターフェースを提供することで再生区間を決定する手法\cite{Kawamura}や、
-講義ノートといった手書きメモに対して音声データを関連付ける手法\cite{Stifelman}などが提案されている。
-
-\paragraph*{タグ付け}
-
-研究ノートの補助的な記録手段として音声データを利用するシステムが提案されている\cite{Kawanishi}。
-事前に用意された研究ノートから形態素解析などを利用してキーワードを抽出し、音声データに付与する手法がとられている。
-
-また、音声データの特定のタイミングにタグを付与できる録音システムが開発されている\cite{Fujisaka}。
-学生がノートテイキングの補助として使うことを想定しており、重要な説明等を逃さないよう素早くタグ付けが行えるインターフェースが実装されている。
-
-\subsection{音声ログの検索手法}
-
-音声認識技術を活用したテキストによる音声検索手法が提案されている\cite{Vemuri}。
-試作されたアプリケーションでは音声データに含まれる単語からキーワード検索が可能となっているほか、
-音声認識の信頼度を文字色に反映させたり、ストップワードを見えにくくするなどして
-ユーザが録音の要点を思い出しやすくなるよう配慮されている。
-
-\subsection{写真との組み合わせ}
-写真と音声を組み合わせによる体験記録手法が提案されている\cite{Nakakura}。
-写真と手書きだけでは表現できない雰囲気を音声に記録し,
-写真によって音声データに一覧性を持たせる仕組みである.
-写真が音声の内容把握を助け,音声データの価値を高めることも確認されている。
-
-また、同様の手法によって撮影された写真を、音声とともに閲覧できるWebサイトが公開されている\cite{Masui}。
-
-
-\section{設計方針}
-
-TBD
 
 \section{利用例}
 
