--- a/05.tex
+++ b/05.tex
@@ -1,14 +1,14 @@
-\chapter{結論}
-\label{chap:conclusion}
+\chapter{考察}
+\label{chap:discussion}
 
-本章では、本研究で得られた成果と今後の展望について述べる。
+本章では,「Gyaon」についての考察を行う。
 
 \newpage
 
-\section{本研究の成果}
+\section{自分で使ってみた}
 
 TBD
 
-\section{今後の展望}
+\section{研究室で使ってみた}
 
 TBD
