--- a/02.tex
+++ b/02.tex
@@ -7,8 +7,13 @@
 
 \section{設計指針}
 
-本研究の目的を踏まえ、「Gyaon」では
-
+「Gyaon」では
+\begin{itemize}
+\item 単純な録音操作
+\item 音声管理の簡単さ
+\item 他システムからの音声の利用のしやすさ
+\end{itemize}
+を優先した設計を行うことで録音の不便を解消し、音声の有効活用を促すシステムを目指す。
 
 \section{利用例}
 
