--- a/02.tex
+++ b/02.tex
@@ -13,8 +13,58 @@
 \item 音声管理の簡単さ
 \item 他システムからの音声の利用のしやすさ
 \end{itemize}
-を優先した設計を行うことで録音の不便を解消し、音声の有効活用を促すシステムを目指す。
+を優先した設計を行うことで録音の不便を解消し、音声の有効活用を促すシステムを目指している。
 
 \section{利用例}
+Gyaonは様々な利用シーンに対応するため、PC用Webアプリケーション、
+Androidスマートフォン用アプリケーション、
+およびその他の録音に特化したハードウェア
+にてシステム構築する。
+それぞれのプラットフォームにおける利用例を述べる。
 
-TBD
+\subsection{PC版}
+
+%基本操作
+%録音操作
+%
+%再生操作
+%
+%コメントの追加
+%
+%ダウンロードリンクの取得
+%
+%プリレコーディング機能
+%
+%地図機能
+%
+%IDの共有
+
+
+% 録音即再生・アップロード
+% ボタンを押している間録音する
+% 離したら録音停止して、すぐサーバにアップロードされる
+% マウスオーバーで再生
+%  録音した音声はリストに表示され、マウスカーソルを重ねるだけで再生できる
+% 音声にコメントを付けられる
+% 音声の直リンクを取得できる
+%  他人にすぐ共有できる
+%  ダウンロードすればローカル環境で利用できる
+% さかのぼり録音できる
+%  今いいこと言った！を逃さない
+%  急に面白い音が聞こえてきても逃さない
+% 音声を地図上にマッピングできる
+%  どこで撮ったのか[わかる.icon]
+% ユーザIDを共有してコミュニケーションする
+%  誰かが録音するとすぐに再生される
+% Gyaonキー
+\subsection{Android版}
+% PCの無い場所や外出先でもWeb版と同様に録音可能
+% 画面に録音ボタンを常駐させておけるので録音が簡単
+\subsection{その他}
+% 録音ペダル(録音専用コンピュータ)
+%  [satake 2016/10/24発表資料]
+%  ばら撒いて使う
+%  ハンズフリーで録音したいときに有用
+%   楽器演奏
+%   運転中
+%   料理中？
