--- a/02.tex
+++ b/02.tex
@@ -16,10 +16,10 @@
 を優先した設計を行うことで録音の不便を解消し、音声の有効活用を促すシステムを目指している。
 
 \section{利用例}
-Gyaonは様々な利用シーンに対応するため、PC用Webアプリケーション、
+様々な利用シーンに対応するため、PC用Webアプリケーション、
 Androidスマートフォン用アプリケーション、
 およびその他の録音に特化したハードウェア
-にてシステム構築する。
+にてGyaonシステムを構築する。
 それぞれのプラットフォームにおける利用例を述べる。
 
 \subsection{PC版}
