--- a/03.tex
+++ b/03.tex
@@ -1,10 +1,16 @@
 \chapter{実装}
 \label{chap:implementation}
 
-本章では,第2章で述べたシステムの設計を受け,「Gyaon」の実装について述べる.
+本章では,第2章で述べたシステムの設計を受け,「Gyaon」の実装について述べる.
 
 \newpage
 
 \section{システム構成}
 
-TBD
+\section{サーバ}
+
+\section{PC版}
+
+\section{Android版}
+
+\section{その他}
