--- a/01.tex
+++ b/01.tex
@@ -23,7 +23,8 @@
 音声は優れた情報記録 / 情報交換の手段となりうる可能性を秘めている．
 ネット上での情報記録 / 情報交換はテキストベースのものがほとんどであるが，
 録音なら手書きメモやPC / スマートフォンへのキー入力を行う必要がなく，記録したいことを喋るだけで良い．
-LINEではボイスメッセージ機能が利用でき，簡単さとテキストにはない表現力の豊かさから，一部のユーザーは積極的に活用している．
+日本の若者を中心に人気のコミュニケーションサービスLINE\footnote{\textsf{https://line.me/ja/}}
+ではボイスメッセージ機能が利用でき，簡単さとテキストにはない表現力の豊かさから，一部のユーザーは積極的に活用している．
 長時間の録音でも，始めてしまえば記録に集中する必要がないので，同時に別のことを行える．
 これはテキストや写真，動画による記録とは異なる点である．また，写真や文章といった他のメディアとの組み合わせによって，
 互いの内容理解を助ける相互補完性の存在が知られている\cite{Nakakura}．MP3などの音声圧縮技術が発達していることから，
