--- a/05.tex
+++ b/05.tex
@@ -1,14 +1,12 @@
 \chapter{考察}
 \label{chap:discussion}
 
-本章では,「Gyaon」についての考察を行う。
+本章では,「Gyaon」についての考察を行う。
 
 \newpage
 
 \section{自分で使ってみた}
 
-TBD
+% 単純なボタン操作によって、〜が実現された
 
 \section{研究室で使ってみた}
-
-TBD
