--- a/01.tex
+++ b/01.tex
@@ -8,7 +8,7 @@
 \section{背景}
 
 録音が可能な各種の小型レコーダ装置は古くから販売されており，またスマートフォンでは様々な録音アプリケーションを利用できる．
-これらは音楽に携わる人やインタビュー・会議を記録するといった用途に重宝されるが，
+これらは音楽に携わる人やインタビュー/会議を記録するといった用途に重宝されるが，
 日常的にメモを記録するなどして活用している人は少ない．
 音声といえば，最近はSiriやAmazon echoといった音声入力システムが普及している．
 これらは高い認識精度と強力なアシスタント機能を持ち，連携するアプリケーションやハードウェアも多く，利便性は高い．
@@ -36,7 +36,7 @@
 \subsection{音声が活用されない理由}
 
 以上のような音声の有用性が知られているにも関わらず多くの人に活用されないのは，便利に使える録音システムが存在しないからである．
-既存の録音システムは録音の手順が煩雑である．一般的に録音・停止・再生それぞれでボタン操作が必要であり，
+既存の録音システムは録音の手順が煩雑である．一般的に録音/停止/再生それぞれでボタン操作が必要であり，
 音声記録の単純さをインターフェースが阻害している．また，撮った音声を管理するのも簡単でない．
 録音時刻 / 再生時間といった基本的なメタデータや自ら設定したタグ等をもとに音声を検索できるが，
 音声が増えていくほど，内容理解を助ける仕組みとして十分とはいえない．それらの音声は，
