--- a/02.tex
+++ b/02.tex
@@ -24,11 +24,11 @@ Androidスマートフォン用アプリケーション
 \subsection{PC版}
 
 \paragraph{基本操作}
-    図\ref{button}の赤いボタンが録音ボタンであり、
-    長押しすることで録音を開始する。
-    ボタンを離すと録音が停止し、直ちに音声データがサーバへアップロードされる。
-    アップロードが完了したものは音声リスト(図\ref{list})に表示され、
-    マウスカーソルを重ねるだけで再生できる。
+図\ref{button}の赤いボタンが録音ボタンであり、
+長押しすることで録音を開始する。
+ボタンを離すと録音が停止し、直ちに音声データがサーバへアップロードされる。
+アップロードが完了したものは音声リスト(図\ref{list})に表示され、
+マウスカーソルを重ねるだけで再生できる。
 
 \begin{figure}[H]
 \centering
@@ -45,17 +45,17 @@ Androidスマートフォン用アプリケーション
 \end{figure}
 
 \paragraph{コメントの追加}
-    音声リスト内にコメント入力欄があり、クリックすると入力モードに移行する。
-    音声の内容自由にメモを記録することができる。
+音声リスト内にコメント入力欄があり、クリックすると入力モードに移行する。
+音声の内容自由にメモを記録することができる。
 
 \paragraph{音声URLの取得}
-    音声リストの右側のコピーボタンをクリックすることで、
-    PCのクリップボードに音声データのURLがコピーされる。
-    そのままアクセスすれば音声をダウンロードでき、ローカル環境のアプリケーションなどで利用できるほか、
-    URLを経由して他人に音声を渡すことも可能である。
-    またNota.inc\footnote{\textsf{http://www.notainc.com/ja/}}のWikiシステム
-    Scrapbox\footnote{\textsf{https://scrapbox.io/}}ではオーディオ記法を利用でき、
-    決められた書式で音声のURLを貼ると、Gyaonと同様にマウスカーソルによる音声の再生が可能となる。
+音声リストの右側のコピーボタンをクリックすることで、
+PCのクリップボードに音声データのURLがコピーされる。
+そのままアクセスすれば音声をダウンロードでき、ローカル環境のアプリケーションなどで利用できるほか、
+URLを経由して他人に音声を渡すことも可能である。
+またNota.inc\footnote{\textsf{http://www.notainc.com/ja/}}のWikiシステム
+Scrapbox\footnote{\textsf{https://scrapbox.io/}}ではオーディオ記法を利用でき、
+決められた書式で音声のURLを貼ると、Gyaonと同様にマウスカーソルによる音声の再生が可能となる。
 
 \begin{figure}[H]
 \centering
@@ -65,26 +65,36 @@ Androidスマートフォン用アプリケーション
 \end{figure}
 
 \paragraph{プリレコーディング機能}
-    図のprerecスイッチをONにしておくと常に録音する
-    最大10秒間
-    撮りたい音を逃さない
-        今いいこと言った！を逃さない
-        急に面白い音が聞こえてきても逃さない
+図\ref{button}のpre-recordingスイッチをONにするとアプリ起動中は常時録音し、
+録音ボタンを押す10秒前から音声を記録できる。
+撮りたい音を聞いてから録音ボタンを押しても間に合う
+もし突然撮りたい音が聞こえてきた場合でも逃さず録音することが可能である。
+%撮りたい音を逃さない
+%今いいこと言った！を逃さない
+%急に面白い音が聞こえてきても逃さない
 
 \paragraph{地図機能}
-    音声データに紐付けられた位置情報をもとに、音声を地図上にマッピングして一覧できる
-    ある音をどこで撮ったのか分かる
-        音の内容も推測できる
-%   gyaonmapのスクショ
+音声データに紐付けられた位置情報をもとに、音声を地図上にマッピングして一覧できる
+\footnote{\textsf{地図機能はhttps://gyaon.herokuapp.com/map/にて試験運用中}}。
+ある音声がどの場所で撮影されたか分かることから、その場所の雰囲気や、
+景色がいい/この店は美味しいといったその場所ならではの有用な情報を記録/共有できる。
+
+\begin{figure}[H]
+\centering
+\fbox{\includegraphics[width=9cm]{images/map.png}}
+\caption{地図機能}
+\label{map}
+\end{figure}
 
 \paragraph{IDの共有}
-
+URL末尾はユーザIDとなっている
+IDごとに音声を管理している
 % ユーザIDを共有してコミュニケーションする
 %  誰かが録音するとすぐに再生される
 
 \paragraph{Gyaonキー}
-    アプリを起動しなくていい
-%    ⌘+FNの画像
+アプリを起動しなくていい
+%⌘+FNの画像
 
 \paragraph{Gyaonペダル}
 %  [satake 2016/10/24発表資料]
@@ -105,11 +115,11 @@ PC版と同じ録音インターフェースを持つ
 図のように、画面に録音ボタンを常駐させておけるのでアプリを起動しなくても録音できる
 撮り逃がさない
 持ち運べるので、外で環境音を撮るのに向いてる
-    鳥のさえずり
-    川のせせらぎ
+鳥のさえずり
+川のせせらぎ
 外で聞いた面白音声を共有する
-    電車遅延のアナウンスとか
-    街頭演説とか
+電車遅延のアナウンスとか
+街頭演説とか
 
 %  アプリの画面のスクショ
 %  常駐ボタンのスクショ
