利用例おわり

--- a/01.tex
+++ b/01.tex
@@ -37,7 +37,7 @@
 
 以上のような音声の有用性が知られているにも関わらず多くの人に活用されないのは，便利に使える録音システムが存在しないからである．
 既存の録音システムは録音の手順が煩雑である．一般的に録音/停止/再生それぞれでボタン操作が必要であり，
-音声記録の単純さをインターフェースが阻害している．また，撮った音声を管理するのも簡単でない．
+音声記録の単純さをインターフェースが阻害している．また，録った音声を管理するのも簡単でない．
 録音時刻 / 再生時間といった基本的なメタデータや自ら設定したタグ等をもとに音声を検索できるが，
 音声が増えていくほど，内容理解を助ける仕組みとして十分とはいえない．それらの音声は，
 スマホアプリでさえもその録音システムの中でデータを管理しないといけないことが多く，
