--- a/05.tex
+++ b/05.tex
@@ -1,12 +1,89 @@
 \chapter{考察}
 \label{chap:discussion}
 
-本章では,「Gyaon」についての考察を行う。
+本章では,Gyaonについての考察を行う。
 
 \newpage
 
-\section{自分で使ってみた}
+\section{単純な録音操作による音声利用の促進}
+一般的な録音システムでは、録音開始/停止それぞれにボタン操作が必要であり、
+外部で音声を利用する場合はPC等に音声ファイルをエクスポートしなければならない。
+Gyaonでは録音ボタンを押している間録音し、停止後直ちに音声のアップロードが開始される手順となっており、単純な録音操作を実現している。
 
-% 単純なボタン操作によって、〜が実現された
+著者は開発時から継続的にGyaonを使用しており、単純な録音操作によって、録音行為に対する心理的障壁が低くなったと感じている。
+このことから、以前まで手書きやキーボード入力していたメモなどを全て録音するようになり、音声を活用する場面が増えた。
 
-\section{研究室で使ってみた}
+\paragraph{研究会での利用}
+著者の所属する増井研究会でも、Gyaonによって音声利用が促進された。
+
+様々な素材の叩打音を分析する研究が行われており、そこではサンプリングのためにGyaonが利用された。
+音声をすぐに確認でき、コメントを付けらる点が好評であった。
+
+また大学が主催する研究発表イベントではリアルタイムな情報共有に利用された。
+ブース展示がメインのイベントであったため、面白い展示を見つけた学生がGyaonで共有したり、
+楽器のブースでは演奏を録音するなどした。
+増井研究会のブースでは常にGyaonを起動していたので、有益な情報を見逃すことなく受け取ることができた。
+
+%   共有しやすい[OK.icon]
+%   	URLがあるので「これ聞け」がすぐできる
+%
+%   	長時間の音声を録るのはむずい
+%   	おしっぱだから
+
+%   PCもスマホも手元にない時はどうしようもない[NG.icon]
+%   	録音機をばら撒くと解決するかも
+%   今までのテキストメモに加えて音声メモも管理しないといけない[NG.icon]
+%   	1か所に情報を溜めたいという欲求がある
+
+\section{特定の用途における〜}
+
+\subsection{雰囲気記録システムとしての〜}
+   スマホで気軽に撮れるので結構素材が溜まった
+   	鳥のさえずり
+    [おめでとう]
+    音声を聞きながら、あんなことがあったね、と研究会のメンバーで懐かしむ場面もあった
+
+\subsection{楽器練習での活用}
+プレビュー再生が効いてる
+
+  	Gyaonペダル最高[OK.icon]
+  	オウム返し最高[OK.icon]
+   さっき撮った音をもう一度聞きたくなった時は大変[NG.icon]
+   	楽器を持っていて手が空いてない前提
+    画面がなくても操作できれば良い？
+
+
+\section{外部システムでの活用}
+エクスポート
+URL発行
+URL取得
+URLによるアクセス
+の重要性
+
+Webに貼れることは重要
+音声のURLがあることは重要
+
+    研究室で使ってもらった
+    Scrapbox
+    オーディオ記法というものが使える
+   	文章に音声を埋め込める
+    	GyaonのURLを貼る
+    GyaonWebと同様マウスオーバーで簡単に再生可能
+    URLだけで利用できるので親和性高し
+    活用例
+     [何か書くと早川が録音して返す]
+     	ゼミの時間におもしろ音声を流して盛り上がった
+      音声素材置場として活用できた
+      合成音声として使うというアイデアが生まれた
+     [Gyaon/ORF2016音声]
+     	ポスター発表中にもらった意見を忘れず記録できた
+      Wikiに貼ることで研究室のメンバーに共有できる
+      いつでも見返せる
+     [図形に関する英単語]
+     	発音をすぐ再生できる
+      単語に関する画像なども埋め込んでおけば強く印象に残るハズ
+
+ 〜という機能を付けたら〜という使い方を発見して幸せになった
+
+ \section{プライバシ問題}
+ もともといろいろ指摘されてた\cite{}
