--- a/05.tex
+++ b/05.tex
@@ -13,7 +13,7 @@ Gyaonでは録音ボタンを押している間録音し、停止後直ちに音
 著者は開発時から継続的にGyaonを使用しており、単純な録音操作によって、録音行為に対する心理的障壁が低くなったと感じている。
 このことから、以前まで手書きやキーボード入力していたメモなどを全て録音するようになり、音声を活用する場面が増えた。
 
-\paragraph{研究会での利用}
+\paragraph{研究会での活用}
 著者の所属する増井研究会でも、Gyaonによって音声利用が促進された。
 
 様々な素材の叩打音を分析する研究が行われており、そこではサンプリングのためにGyaonが利用された。
@@ -35,55 +35,53 @@ Gyaonでは録音ボタンを押している間録音し、停止後直ちに音
 %   今までのテキストメモに加えて音声メモも管理しないといけない[NG.icon]
 %   	1か所に情報を溜めたいという欲求がある
 
-\section{特定の用途における〜}
+\paragraph{雰囲気記録システムとしての活用}
+スマートフォンでも簡単に録音できることから、その場の雰囲気を記録する用途に活用された。
+鳥のさえずりや川のせせらぎといった環境音を記録して自宅で聞いたり、研究会のミーティングを録音し、
+それを振り返りながらメンバーと懐かしむような場面もあった。
 
-\subsection{雰囲気記録システムとしての〜}
-   スマホで気軽に撮れるので結構素材が溜まった
-   	鳥のさえずり
-    [おめでとう]
-    音声を聞きながら、あんなことがあったね、と研究会のメンバーで懐かしむ場面もあった
+\paragraph{楽器練習支援システムとしての活用}
+Gyaonペダルとプレビュー再生機能の組み合わせによって、楽器練習支援システムとして便利に活用できた。
+楽器演奏において自分の演奏を客観的に評価することは難しいが、録音を行うことによって解決される。
+Gyaonペダルを利用すれば演奏中でも録音でき、録音後のプレビュー再生で演奏をすぐに確認することができる。
+演奏/録音/確認を素早く行えることから、従来の録音機では実現できなかった新しい練習形態を生み出したといえる。
 
-\subsection{楽器練習での活用}
-プレビュー再生が効いてる
-
-  	Gyaonペダル最高[OK.icon]
-  	オウム返し最高[OK.icon]
-   さっき撮った音をもう一度聞きたくなった時は大変[NG.icon]
-   	楽器を持っていて手が空いてない前提
-    画面がなくても操作できれば良い？
+%   さっき撮った音をもう一度聞きたくなった時は大変[NG.icon]
+%   	楽器を持っていて手が空いてない前提
+%    画面がなくても操作できれば良い？
 
 
 \section{外部システムでの活用}
-エクスポート
-URL発行
-URL取得
-URLによるアクセス
-の重要性
+%エクスポート
+%URL発行
+%URL取得
+%URLによるアクセス
+%の重要性
+%
+%Webに貼れることは重要
+%音声のURLがあることは重要
+%
+%    研究室で使ってもらった
+%    Scrapbox
+%    オーディオ記法というものが使える
+%   	文章に音声を埋め込める
+%    	GyaonのURLを貼る
+%    GyaonWebと同様マウスオーバーで簡単に再生可能
+%    URLだけで利用できるので親和性高し
+%    活用例
+%     [何か書くと早川が録音して返す]
+%     	ゼミの時間におもしろ音声を流して盛り上がった
+%      音声素材置場として活用できた
+%      合成音声として使うというアイデアが生まれた
+%     [Gyaon/ORF2016音声]
+%     	ポスター発表中にもらった意見を忘れず記録できた
+%      Wikiに貼ることで研究室のメンバーに共有できる
+%      いつでも見返せる
+%     [図形に関する英単語]
+%     	発音をすぐ再生できる
+%      単語に関する画像なども埋め込んでおけば強く印象に残るハズ
+%
+% 〜という機能を付けたら〜という使い方を発見して幸せになった!
 
-Webに貼れることは重要
-音声のURLがあることは重要
-
-    研究室で使ってもらった
-    Scrapbox
-    オーディオ記法というものが使える
-   	文章に音声を埋め込める
-    	GyaonのURLを貼る
-    GyaonWebと同様マウスオーバーで簡単に再生可能
-    URLだけで利用できるので親和性高し
-    活用例
-     [何か書くと早川が録音して返す]
-     	ゼミの時間におもしろ音声を流して盛り上がった
-      音声素材置場として活用できた
-      合成音声として使うというアイデアが生まれた
-     [Gyaon/ORF2016音声]
-     	ポスター発表中にもらった意見を忘れず記録できた
-      Wikiに貼ることで研究室のメンバーに共有できる
-      いつでも見返せる
-     [図形に関する英単語]
-     	発音をすぐ再生できる
-      単語に関する画像なども埋め込んでおけば強く印象に残るハズ
-
- 〜という機能を付けたら〜という使い方を発見して幸せになった
-
- \section{プライバシ問題}
- もともといろいろ指摘されてた\cite{}
+\section{プライバシ問題}
+% もともといろいろ指摘されてた\cite{}
