--- a/02.tex
+++ b/02.tex
@@ -54,8 +54,8 @@ PCのクリップボードに音声データのURLがコピーされる。
 そのままアクセスすれば音声をダウンロードでき、ローカル環境のアプリケーションなどで利用できるほか、
 URLを経由して他人に音声を渡すことも可能である。
 またNota.inc\footnote{\textsf{http://www.notainc.com/ja/}}のWikiシステム
-Scrapbox\footnote{\textsf{https://scrapbox.io/}}ではオーディオ記法を利用でき、
-決められた書式で音声のURLを貼ると、Gyaonと同様にマウスカーソルによる音声の再生が可能となる。
+「Scrapbox」\footnote{\textsf{https://scrapbox.io/}}ではオーディオ記法を利用でき、
+決められた書式で音声のURLを入力すると、Gyaonの音声リストと同様にマウスカーソルによる再生が可能となる。
 
 \begin{figure}[H]
 \centering
