--- a/05.tex
+++ b/05.tex
@@ -52,6 +52,8 @@ Gyaonペダルを利用すれば演奏中でも録音でき、録音後のプレ
 %   楽器を持っていて手が空いてない前提
 %   画面がなくても操作できれば良い？
 
+
+
 \section{外部システムでの音声活用の促進}
 URLによって音声データを簡単に取得できるため、Gyaon以外のシステムでも音声活用が促進された。
 %URLだけでいいからWebと親和性が高い
@@ -65,14 +67,14 @@ Gyaonで録音した様々な音声をダウンロードしてDTMソフトに取
 Scrapboxでは音声を文章に埋め込むオーディオ記法が積極的に活用された。
 音声の指定にはURLを利用するためGyaonとの親和性が高く、以下のような活用例が見受けられた。
 
+\subsubsection{発表資料を作る}
+増井研究会ではミーティングで使用する発表資料をScrapboxで作成している。
+文章や画像といった資料に加え、予め録音した発表原稿もページに埋め込むことで、
+発表者が喋らなくてもプレゼンテーションを行えるようになった。
+
 \subsubsection{音声素材をまとめる}
 積極的に自分の声を録音する研究会メンバーがおり、図\ref{hayakawa}のような音声素材ページが作成された。
-%面白い音声
-%単語
-%繋げて再生して簡易的な合成音声として使う
-%     	ゼミの時間におもしろ音声を流して盛り上がった
-%      音声素材置場として活用できた
-%      合成音声として使うというアイデアが生まれた
+ミーティング中に再生して笑いを誘ったり、簡易的な合成音声として活用された。
 
 \begin{figure}[H]
 \centering
@@ -82,7 +84,7 @@ Scrapboxでは音声を文章に埋め込むオーディオ記法が積極的に
 \end{figure}
 
 \subsubsection{単語帳を作る}
-発音が難しい英単語などをまとめ、その音声を埋め込んだ図\ref{word}のような単語帳が作られた。
+発音が難しい英単語等をまとめ、その音声を埋め込んだ図\ref{word}のような単語帳が作られた。
 マウスカーソルを単語に重ねるだけで発音を確認できるので、より印象に残るものとなった。
 
 \begin{figure}[H]
@@ -92,11 +94,9 @@ Scrapboxでは音声を文章に埋め込むオーディオ記法が積極的に
 \label{word}
 \end{figure}
 
-%つまり
-%Webに貼れることは重要
-%音声のURLがあることは重要
+\section{プライバシー問題}
+簡単に録音できるため他者に対するプライバシー侵害の可能性があり、
+社会で導入されることに対する心理的障壁は非常に高いと考えられる\cite{Kawamura}。
 
-% 〜という機能を付けたら〜という使い方を発見して幸せになった!
-
-\section{プライバシ問題}
-% もともといろいろ指摘されてた\cite{}
+また、録音された音声に対してユーザ認証を行っていないため、
+実際に公開して運用する場合は、ユーザのプライバシーに配慮した様々な対策が必要である。
