--- a/06.tex
+++ b/06.tex
@@ -6,9 +6,20 @@
 \newpage
 
 \section{本研究の成果}
-%単純な操作が録音の活用に寄与する→結論で言うことかも
-%    録音
-%    再生
-% Gyaonによって音声の新しい使い方を発見して幸せになった!
+
+既存の録音機の問題を明らかにし、新しい録音システム「Gyaon」を設計/開発した。
+そして、Gyaonの設計指針である
+
+\begin{itemize}
+\item 単純な録音操作
+\item 音声管理の簡単さ
+\item 他システムからの音声の利用のしやすさ
+\end{itemize}
+
+が録音機の不便を解消し、音声活用を促すことが明らかになった。
 
 \section{今後の展望}
+
+さらなる音声活用法の探求や、それを促す録音機能の拡充を行っていきたい。
+
+また、システムのプライバシー対策を万全なものにしていきたい。
