結論おわり

--- a/01.tex
+++ b/01.tex
@@ -10,13 +10,11 @@
 録音が可能な各種の小型レコーダ装置は古くから販売されており，またスマートフォンでは様々な録音アプリケーションを利用できる．
 これらは音楽に携わる人やインタビュー/会議を記録するといった用途に重宝されるが，
 日常的にメモを記録するなどして活用している人は少ない．
-音声といえば，最近はSiriやAmazon echoといった音声入力システムが普及している．
+音声といえば，最近はSiri\footnote{\textsf{http://www.apple.com/jp/ios/siri/}}や
+Amazon Echo\footnote{\textsf{https://www.amazon.com/dp/product/B00X4WHP5E/}}といった音声入力システムが普及している．
 これらは高い認識精度と強力なアシスタント機能を持ち，連携するアプリケーションやハードウェアも多く，利便性は高い．
 しかし，音声認識によってテキストを生成したり操作したいシステムに対して「電気をつける」「音楽を流す」
 などのコマンドを発行するような使い方に留まっている．
-
-% ボイスレコーダの画像
-% Amazon Echoの画像
 
 \subsection{音声の有用性}
 
@@ -40,7 +38,7 @@
 音声記録の単純さをインターフェースが阻害している．また，録った音声を管理するのも簡単でない．
 録音時刻 / 再生時間といった基本的なメタデータや自ら設定したタグ等をもとに音声を検索できるが，
 音声が増えていくほど，内容理解を助ける仕組みとして十分とはいえない．それらの音声は，
-スマホアプリでさえもその録音システムの中でデータを管理しないといけないことが多く，
+スマホアプリでさえもその録音システムの中でデータを管理しなければならないことが多く，
 外部アプリケーション / サービスでの音声活用の可能性を狭めている．
 音声を最大限活用するためには，以上の音声記録の不便を解消する新しい録音システムが必要である．
 
