実装以外書いた

--- a/00_abstract.tex
+++ b/00_abstract.tex
@@ -1,4 +1,9 @@
 % 日本語のアブストラクト
 \begin{jabstract}
-  最後に書く
+録音が可能な各種の小型レコーダ装置は古くから販売されており，またスマートフォンには様々な音声録音アプリが存在するが，
+音声メモを記録したり様々な音を録音したりして活用している人は少ない．
+音声が広く活用されていないのは，録音の手間が繁雑であり，音の再生/検索が簡単でないためだと思われる．
+本研究では，既存の録音システムの不便を解消し，音声活用を促す録音システムを提案する．
 \end{jabstract}
+
+%音声の有用性を提示し，
