--- a/04.tex
+++ b/04.tex
@@ -44,7 +44,7 @@
 \section{写真との組み合わせ}
 写真と音声を組み合わせによる体験記録手法が提案されている\cite{Nakakura}．
 写真と手書きだけでは表現できない雰囲気を音声に記録し，
-写真によって音声データに一覧性を持たせる仕組みである.
+写真によって音声データに一覧性を持たせる仕組みである．
 写真が音声の内容把握を助け，音声データの価値を高めることも確認されている．
 
 また，同様の手法によって撮影された写真を，音声とともに閲覧できるWebサイトが公開されている\cite{Masui}．
