--- a/03.tex
+++ b/03.tex
@@ -1,7 +1,7 @@
 \chapter{実装}
 \label{chap:implementation}
 
-本章では,第2章で述べたシステムの設計を受け,Gyaonの実装について述べる.
+本章では，第2章で述べたシステムの設計を受け，Gyaonの実装について述べる．
 
 \newpage
 
