--- a/06.tex
+++ b/06.tex
@@ -1,14 +1,14 @@
 \chapter{結論}
 \label{chap:conclusion}
 
-本章では、本研究で得られた成果と今後の展望について述べる。
+本章では，本研究で得られた成果と今後の展望について述べる．
 
 \newpage
 
 \section{本研究の成果}
 
-既存の録音機の問題を明らかにし、新しい録音システム「Gyaon」を設計/開発した。
-そして、Gyaonの設計指針である
+既存の録音システムの問題を明らかにし，新しい録音システム「Gyaon」を設計/開発した．
+そして，Gyaonの設計指針である
 
 \begin{itemize}
 \item 単純な録音操作
@@ -16,10 +16,9 @@
 \item 他システムからの音声の利用のしやすさ
 \end{itemize}
 
-が録音機の不便を解消し、音声活用を促すことが明らかになった。
+が録音機の不便を解消し，音声活用を促すことが明らかになった．
 
 \section{今後の展望}
 
-さらなる音声活用法の探求と録音機能の拡充を行っていきたい。
-
-また、システムのプライバシー対策を万全なものにしていきたい。
+さらなる音声活用法の探求と録音機能の拡充を行っていきたい．
+また，システムのプライバシー対策を万全なものにしていきたい．
