--- a/03.tex
+++ b/03.tex
@@ -6,9 +6,30 @@
 \newpage
 
 \section{システム構成}
+Gyaonは，〜からなる．構成図を図\ref{}に示す．
+
+%サーバ
+%    ストレージ
+%    DB
+%クライアント
+%    PC
+%    Android
+
+%簡単な図を描きたい
 
 \section{サーバ}
+%音声データの保存にS3
+%音声データの管理にmongoDB
+%音声データのアップロード受付/DB操作/ストレージへの保存をサーバが担う
 
 \section{PC版}
+%PC版のGyaonクライアントはHTML/CSS/JavaScriptで実装されており，ブラウザ上のWebアプリケーションとして動作する.
 
 \section{Android版}
+%Android版のGyaonクライアントはJavaで実装されており，通常のAndroidアプリケーションとして動作する．
+%常駐型の録音ボタンは，現状serviceを使っているが
+%serviceで常駐
+%常駐ボタンが邪魔だったりするので，他の方法を考えたい
+%スマホを起動しなくてもいい方法
+%    専用ボタンとか
+%    ヘッドセットとか
