実装WIP 長押し〜を押している間〜に変更

--- a/02.tex
+++ b/02.tex
@@ -24,8 +24,7 @@ Androidスマートフォン用アプリケーション
 \subsection{PC版}
 
 \subsubsection{基本操作}
-図\ref{button}の赤いボタンが録音ボタンであり，
-長押しすることで録音を開始する．
+図\ref{button}の赤いボタンが録音ボタンであり，押している間だけ録音する．
 ボタンを離すと録音が停止し，プレビュー再生が行われる．同時に音声データがサーバへアップロードされる．
 アップロードが完了したものは音声リスト(図\ref{list})に表示され，
 マウスカーソルを重ねるだけで再生できる．
@@ -99,7 +98,7 @@ https://gyaon.herokuapp.com/\{ユーザID\}
 Gyaonキーアプリケーション\footnote{\textsf{Mac用アプリケーションをhttps://github.com/stkay/GyaonWithKarabinerにて配布中}}
 を利用すれば，PCの任意のキーを録音ボタンに設定できる．
 これにより，アプリケーションを起動することなく録音可能である．
-Webアプリケーションと同様に長押し録音，自動アップロードが行われる．
+Webアプリケーションと同様に押している間録音，自動アップロードが行われる．
 %キーボードじゃなくて，他の汎用なボタンでもいいよね
 
 \begin{figure}[H]
@@ -131,7 +130,7 @@ USB接続の汎用なペダル(図\ref{pedal})を接続すれば，楽器演奏/
 \subsection{Android版}
 
 \subsubsection{基本操作}
-Android用Gyaonアプリケーションは録音のみ可能で，PC版と同様に長押し録音/自動アップロードが利用できる．(図\ref{app})．
+Android用Gyaonアプリケーションは録音のみ可能で，PC版と同様に押している間録音/自動アップロードが利用できる．(図\ref{app})．
 「Your ID」には任意のユーザIDを入力する．
 PC版で使用しているユーザIDを入力すれば，スマートフォンでの録音をPCでも聞けるようになる．
 
