--- a/01.tex
+++ b/01.tex
@@ -7,44 +7,65 @@
 
 \section{背景}
 
-録音が可能な各種の小型レコーダ装置は古くから販売されており，またスマートフォンでは様々な録音アプリケーションを利用できる．
+小型の録音装置は古くから販売されており，またスマートフォンでは様々な録音アプリケーションを利用できる．
 これらは音楽に携わる人やインタビュー/会議を記録するといった用途に重宝されるが，
 日常的にメモを記録するなどして活用している人は少ない．
-音声といえば，最近はSiri\footnote{\textsf{http://www.apple.com/jp/ios/siri/}}や
-Amazon Echo\footnote{\textsf{https://www.amazon.com/dp/product/B00X4WHP5E/}}といった音声入力システムが普及している．
-これらは高い認識精度と強力なアシスタント機能を持ち，連携するアプリケーションやハードウェアも多く，利便性は高い．
-しかし，音声認識によってテキストを生成したり操作したいシステムに対して「電気をつける」「音楽を流す」
-などのコマンドを発行するような使い方に留まっている．
 
-\subsection{音声の有用性}
+\subsection{音声情報の有用性}
 
-音声は優れた情報記録 / 情報交換の手段となりうる可能性を秘めている．
-ネット上での情報記録 / 情報交換はテキストベースのものがほとんどであるが，
-録音なら手書きメモやPC / スマートフォンへのキー入力を行う必要がなく，記録したいことを喋るだけで良い．
-日本の若者を中心に人気のコミュニケーションサービスLINE\footnote{\textsf{https://line.me/ja/}}
-ではボイスメッセージ機能が利用でき，簡単さとテキストにはない表現力の豊かさから，一部のユーザーは積極的に活用している．
+音声情報には，以下のような有用性が存在する．
+
+\begin{enumerate}
+
+\item 喋るだけで記録できる
+
+2017年現在，ネット上での情報記録 / 情報交換はテキストベースのものがほとんどであるが，
+録音ならPC / スマートフォンへのキー入力を行う必要がなく，記録したいことを喋るだけで良い．
+日本の若者を中心に広く利用されているコミュニケーションサービスLINE\footnote{\textsf{https://line.me/ja/}}
+ではボイスメッセージ機能が利用でき，その簡単さから一部のユーザーに積極的に活用されている．
+
+\item 記録しながら同時に別のことを行える
+
 長時間の録音でも，始めてしまえば記録に集中する必要がないので，同時に別のことを行える．
-これはテキストや写真，動画による記録とは異なる点である．また，写真や文章といった他のメディアとの組み合わせによって，
-互いの内容理解を助ける相互補完性の存在が知られている\cite{Nakakura}．MP3などの音声圧縮技術が発達していることから，
-データ量を気にせずこういった活用ができるはずである．
-すでに様々な活用が知られている音声だが，なぜ日常的に利用されていないのか．
+これはテキストや写真，動画による記録とは異なる点である．
 
-% LINEのボイスメッセージの画像
+\item 他のメディアとの相互補完性がある
+
+また，写真や文章といった他のメディアとの組み合わせによって，
+互いの内容理解を助ける相互補完性の存在が知られている\cite{Nakakura}．
+
+\end{enumerate}
+
+以上のように，音声情報は優れた情報記録 / 情報交換の手段となりうる可能性を秘めている．
 
 \subsection{音声が活用されない理由}
 
-以上のような音声の有用性が知られているにも関わらず多くの人に活用されないのは，便利に使える録音システムが存在しないからである．
-既存の録音システムは録音の手順が煩雑である．一般的に録音/停止/再生それぞれでボタン操作が必要であり，
-音声記録の単純さをインターフェースが阻害している．また，録った音声を管理するのも簡単でない．
-録音時刻 / 再生時間といった基本的なメタデータや自ら設定したタグ等をもとに音声を検索できるが，
-音声が増えていくほど，内容理解を助ける仕組みとして十分とはいえない．それらの音声は，
-スマホアプリでさえもその録音システムの中でデータを管理しなければならないことが多く，
+音声の有用性が知られているにも関わらず多くの人に活用されないのは，便利に使える録音システムが存在しないためだと思われる．
+
+既存の録音システムには，以下のような問題点が見受けられる．
+
+\begin{enumerate}
+\item 録音/再生の手順が煩雑
+
+一般的に録音/停止/再生それぞれでボタン操作が必要であり，音声記録の単純さをインターフェースが阻害している．
+
+\item 管理しづらい
+
+録音時刻/再生時間といった基本的なメタデータや，自ら設定したタグ等をもとに音声を検索できるが，
+音声が増えていくほど，内容理解を助ける仕組みとして十分とはいえない．
+
+\item 音声を再利用しづらい
+
+録音システムの中で音声を管理しなければならないことが多く，
 外部アプリケーション / サービスでの音声活用の可能性を狭めている．
-音声を最大限活用するためには，以上の音声記録の不便を解消する新しい録音システムが必要である．
+
+\end{enumerate}
+
+音声を最大限活用するためには，これらの問題を解決する新しい録音システムが必要である．
 
 \section{本研究の目的}
 
- 既存の録音システムに見られる不便を解消し，音声を有効活用できるようなシステムを開発することが本研究の目的である．
+既存の録音システムに見られる不便を解消し，音声を有効活用できるようなシステムを開発することが本研究の目的である．
 
 \section{本論文の構成}
 
