--- a/90_acknowledgment.tex
+++ b/90_acknowledgment.tex
@@ -2,7 +2,7 @@
 
 本論文の執筆において，担当教員である増井俊之教授に多大なるご指導と貢献をしていただきました．
 また，本システムの実装において，研究会OBの橋本 翔氏，桜井雄介氏に多くの貢献と助言を頂きました．
-環境情報学部の早川 匠氏には有用な音声素材を惜しげもなく提供していただきました．
+環境情報学部の早川 匠氏には有用な音声素材を提供していただきました．
 この場を借りて感謝の意を表します．
 
 \end{acknowledgment}
