関連研究修正

--- a/01.tex
+++ b/01.tex
@@ -71,5 +71,5 @@
 
 第1章では，本研究における背景と問題意識，目的について述べた．
 第2章では，第1章で述べた問題意識を踏まえ，新しい録音システムを提案する．
-第3章ではシステムの実装に関して述べ，第4章では先行事例について述べる．
+第3章ではシステムの実装に関して述べ，第4章では関連研究について述べる．
 第5章ではシステムの考察を行い，第6章では本研究を総括する．
