--- a/06.tex
+++ b/06.tex
@@ -1,7 +1,7 @@
 \chapter{結論}
 \label{chap:conclusion}
 
-本章では，本研究で得られた成果と今後の展望について述べる．
+本章では，本研究で得られた成果について述べる．
 
 \newpage
 
@@ -18,7 +18,4 @@
 
 が録音機の不便を解消し，音声活用を促すことが明らかになった．
 
-\section{今後の展望}
-
-さらなる音声活用法の探求と録音機能の拡充を行っていきたい．
-また，システムのプライバシー対策を万全なものにしていきたい．
+今後は，さらなる音声活用法の探求と録音機能の拡充を行っていきたい．
