とりあえず完成

--- a/01.tex
+++ b/01.tex
@@ -13,7 +13,7 @@
 
 \subsection{音声情報の有用性}
 
-音声情報には，以下のような有用性が存在する．
+音声情報には以下のような有用性が知られており，優れた情報記録 / 情報交換の手段となりうる可能性を秘めている．
 
 \begin{enumerate}
 
@@ -36,7 +36,7 @@
 
 \end{enumerate}
 
-以上のように，音声情報は優れた情報記録 / 情報交換の手段となりうる可能性を秘めている．
+\newpage
 
 \subsection{音声が活用されない理由}
 
