--- a/main.bib
+++ b/main.bib
@@ -67,18 +67,16 @@ address = {New York, NY, USA},
 keywords = {acoustic structuring, audio, paper, pen interaction, speech, speech as data, speech interfaces, user structuring},
 }
 
-@article{Kawanishi,
+@inproceedings{Kawanishi,
 author="川西 康介 and 大平 茂輝 and 松原 茂樹 and 長尾 確",
 title="研究活動における音声ログの整理と利用",
-journal="第74回全国大会講演論文集",
+booktitle="第74回全国大会講演論文集",
 ISSN="",
-publisher="",
-year="2012",
+publisher="一般社団法人情報処理学会",
 month="mar",
-volume="2012",
-number="1",
-pages="723-724",
-URL="http://ci.nii.ac.jp/naid/170000089843/",
+year="2012",
+pages="723-725",
+URL="http://ci.nii.ac.jp/naid/110009785030/",
 DOI="",
 }
 
