--- a/00_abstract.tex
+++ b/00_abstract.tex
@@ -1,7 +1,7 @@
 % 日本語のアブストラクト
 \begin{jabstract}
-小型の録音装置は古くから販売されており，またスマートフォンには様々な音声録音アプリが存在するが，
+小型の録音装置は古くから販売されており，またスマートフォンでは様々な録音アプリケーションを利用できるが，
 音声メモを記録したり様々な音を録音したりして活用している人は少ない．
-音声が広く活用されていないのは，録音の手間が繁雑であり，音の再生/検索が簡単でないためだと思われる．
+音声が広く活用されていないのは，録音の手間が煩雑であり，音の再生/検索が簡単でないためだと思われる．
 本研究では，既存の録音システムの不便を解消し，音声活用を促す録音システムを提案する．
 \end{jabstract}
