--- a/02.tex
+++ b/02.tex
@@ -16,17 +16,14 @@
 \end{enumerate}
 
 を実現する録音システム「Gyaon」を設計した．上記1〜3を実現するため，具体的には
-%を優先したシステムの実現を目標とする．
-%Gyaonでは
 
 \begin{enumerate}
-\item ボタンを押している間録音する
-\item マウスオーバーで再生する
-\item 簡単にコメントを書ける
-\item 録音後すぐにアップロードして，URLを取得できる
+\item ボタンを押している間録音を行い，録音後はすぐにWebへアップロードする
+\item ブラウザ上に音声リストを表示し，マウスオーバーで再生する
+\item 音声リスト上で簡単にコメントを編集できる
 \end{enumerate}
 
-ようなアプリケーションを実装した．
+というアプリケーションを実装した．
 
 \section{利用例}
 様々な利用シーンに対応するため，PC用Webアプリケーションおよび
@@ -55,7 +52,7 @@ PC版Gyaonはhttps://gyaon.herokuapp.com/にて試験運用しており，Webブ
 音声の内容などを自由に記録することができる．
 
 \subsubsection{音声URLの取得}
-音声リスト右側のコピーボタンをクリックすることで，
+音声リスト右側のURLコピーボタンをクリックすることで，
 PCのクリップボードに音声データのURLがコピーされる．
 そのままアクセスすれば音声をダウンロードでき，ローカル環境のアプリケーションなどで利用できるほか，
 URLを経由して他人に音声を渡すことも可能である．
