--- a/05.tex
+++ b/05.tex
@@ -1,102 +1,43 @@
-\chapter{考察}
+\chapter{議論}
 \label{chap:discussion}
 
-本章では，Gyaonについての考察を行う．
+本章では，Gyaonシステムについての議論を行う．
 
 \newpage
 
-\section{単純な録音操作による音声活用の促進}
-Gyaonでは録音ボタンを押している間録音し，停止後直ちに音声のアップロードが開始される手順となっており，単純な録音操作を実現している．
-著者は開発時から継続的にGyaonを使用しており，単純な録音操作によって，録音行為に対する心理的障壁が低くなったと感じている．
-このことから，以前まで手書きやキーボード入力していたメモなどを全て録音するようになり，音声を活用する場面が増えた．
-その他にも，様々な場面で音声が活用された．
+日常的な体験や雰囲気を記録するための録音デバイスについて研究が行われている\cite{Poupyrev}．
+録音は何かを記録，説明したり，思い出すのに重要な手段だが，日常的に行っている人は少ないと指摘されている．
+より気軽に録音できるよう日用品にセンサーを埋め込み，状況の変化に応じて録音/再生するデバイスが提案されている．
+日用品に溶け込み，単純明快な録音/再生インターフェースが実現されているが，
+本を閉じる/開くといった二値的な状況変化でしか操作できないため，
+デバイス単体で複数の音声を管理することが困難になっている．
 
-\paragraph*{研究会での活用}
-著者の所属する増井研究会では様々な素材の叩打音を分析する研究が行われており，サンプリングのためにGyaonが活用された．
-音声をすぐに確認でき，コメントを付けられる点が好評であった．
+人間生活に関わる情報を長期間にわたり記録するライフログ関連研究では，
+そのログの一部として音声データがよく利用されている\cite{Bell}．
+音声データの特徴量を計算し，閾値処理するインターフェースを提供することで再生区間を決定する手法\cite{Kawamura}や，
+講義ノートといった手書きメモに対して音声データを関連付ける手法\cite{Stifelman}などが提案されている．
 
-また大学が主催する研究発表イベントではリアルタイムな情報共有に活用された．
-ブース展示がメインのイベントであったため，面白い展示を見つけた学生がGyaonで共有したり，
-楽器のブースでは演奏を録音するなどした．
-増井研究会のブースでは常にGyaonを起動していたので，有益な情報を見逃すことなく受け取ることができた．
+研究ノートの補助的な記録手段として音声データを利用するシステムが提案されている\cite{Kawanishi}．
+事前に用意された研究ノートから形態素解析などを利用してキーワードを抽出し，音声データに付与する手法がとられている．
 
-%共有しやすい
-%   URLがあるので「これ聞け」がすぐできる
-%
-%長時間の音声を録るのはむずい
-%   ボタンを押し続けるのは疲れる
+また，音声データの特定のタイミングにタグを付与できる録音システムが開発されている\cite{Fujisaka}．
+学生がノートテイキングの補助として使うことを想定しており，重要な説明等を逃さないよう素早くタグ付けが行えるインターフェースが実装されている．
 
-%PCもスマホも手元にない時はどうしようもない
-%   録音機をばら撒くと解決するかも
-%今までのテキストメモに加えて音声メモも管理しないといけない
-%   1か所に情報を溜めたいという欲求がある
+音声認識技術を活用したテキストによる音声検索手法が提案されている\cite{Vemuri}．
+試作されたアプリケーションでは音声データに含まれる単語からキーワード検索が可能となっているほか，
+音声認識の信頼度を文字色に反映させたり，ストップワードを見えにくくするなどして
+ユーザが録音の要点を思い出しやすくなるよう配慮されている．
 
-\paragraph*{雰囲気記録システムとしての活用}
-スマートフォンでも簡単に録音できることから，その場の雰囲気を記録する用途に活用された．
-鳥のさえずりや川のせせらぎといった環境音を記録して自宅で聞いたり，研究会のミーティングを録音し，
-それを振り返りながらメンバーと懐かしむような場面もあった．
+写真と音声を組み合わせによる体験記録手法が提案されている\cite{Nakakura}．
+写真と手書きだけでは表現できない雰囲気を音声に記録し，
+写真によって音声データに一覧性を持たせる仕組みである．
+写真が音声の内容把握を助け，音声データの価値を高めることも確認されている．
 
-\paragraph*{楽器練習支援システムとしての活用}
-Gyaonペダルとプレビュー再生機能の組み合わせによって，楽器練習支援システムとして便利に活用できた．
-楽器演奏において自分の演奏を客観的に評価することは難しいが，録音を行うことによって解決される．
-Gyaonペダルを利用すれば演奏中でも録音でき，録音後のプレビュー再生で演奏をすぐに確認することができる．
-演奏/録音/確認を素早く行えることから，従来の録音システムでは実現できなかった新しい練習形態を生み出したといえる．
-
-%さっき撮った音をもう一度聞きたくなった時は大変
-%   楽器を持っていて手が空いてない前提
-%   画面がなくても操作できれば良い？
-
-
-\section{外部システムでの音声活用の促進}
-Gyaonは音声をアップロードし，URLによって音声データを簡単に取得できるため，Gyaon以外のシステムでも音声活用が促進された．
-%URLだけでいいからWebと親和性が高い
-
-\paragraph*{DTMソフトでの活用}
-PC上で音楽制作を行うDTMソフトには，録音したり，取り込んだ外部音声ファイルを1つの楽器として利用する
-サンプラー機能が存在する．
-Gyaonで録音した様々な音声をダウンロードしてDTMソフトに取り込み，作曲に利用することができた．
-
-\paragraph*{「Scrapbox」での活用}
-Scrapboxでは音声を文章に埋め込むオーディオ記法が積極的に活用された．
-音声の指定にはURLを利用するためGyaonとの親和性が高く，以下のような活用例が見受けられた．
-
-\begin{enumerate}
-
-\item 発表資料を作る
-
-増井研究会ではミーティングで使用する発表資料をScrapboxで作成している．
-文章や画像といった資料に加え，予め録音した発表原稿もページに埋め込むことで，
-発表者が喋らなくてもプレゼンテーションを行えるようになった．
-
-\item 音声素材をまとめる
-
-積極的に自分の声を録音する研究会メンバーがおり，図\ref{hayakawa}のような音声素材ページが作成された．
-ミーティング中に再生して笑いを誘ったり，簡易的な合成音声として活用された．
-
-\begin{figure}[H]
-\centering
-\fbox{\includegraphics[width=9cm]{images/hayakawa.png}}
-\caption{音声素材ページ}
-\label{hayakawa}
-\end{figure}
-
-\item 単語帳を作る
-
-発音が難しい英単語等をまとめ，その音声を埋め込んだ図\ref{word}のような単語帳が作られた．
-マウスカーソルを単語に重ねるだけで発音を確認できるので，より印象に残るものとなった．
-
-\begin{figure}[H]
-\centering
-\fbox{\includegraphics[width=9cm]{images/word.png}}
-\caption{音声つき単語帳}
-\label{word}
-\end{figure}
-
-\end{enumerate}
+また，同様の手法によって撮影された写真を，音声とともに閲覧できるWebサイトが公開されている\cite{Masui}．
 
 \section{プライバシー問題}
 簡単に録音できるため他者に対するプライバシー侵害の可能性があり，
 社会で導入されることに対する心理的障壁は非常に高いと考えられる\cite{Kawamura}．
 
 また，現在のGyaonシステムでは全ての音声が公開されており，誰でもアクセス可能である．
-正式なサービスとして運用する場合は，アカウント管理や閲覧権限の設定といった対策が必要である．
+正式なサービスとして運用する場合は，アカウント管理や閲覧権限の対策が必要である．
