--- a/main.tex
+++ b/main.tex
@@ -45,7 +45,7 @@
 
 % 日本語情報（必要なら）
 \jclass  {卒業論文}                             % 論文種別
-\jtitle    {Gyaon \\ 音声活用の幅を広げる録音/共有システム}    % タイトル。改行する場合は\\を入れる
+\jtitle    {Gyaon \\ 音声活用を促す録音/共有システム}    % タイトル。改行する場合は\\を入れる
 \juniv    {慶應義塾大学}                  % 大学名
 \jfaculty  {環境情報学部}               % 学部、学科
 \jauthor  {佐竹 紘明}                       % 著者
