--- a/main.bib
+++ b/main.bib
@@ -70,10 +70,9 @@ keywords = {acoustic structuring, audio, paper, pen interaction, speech, speech 
 @inproceedings{Kawanishi,
 author="川西 康介 and 大平 茂輝 and 松原 茂樹 and 長尾 確",
 title="研究活動における音声ログの整理と利用",
-booktitle="第74回全国大会講演論文集",
+booktitle="第74回情報処理学会全国大会講演論文集",
 ISSN="",
-publisher="一般社団法人情報処理学会",
-month="mar",
+month="March",
 year="2012",
 pages="723-725",
 URL="http://ci.nii.ac.jp/naid/110009785030/",
