--- a/01.tex
+++ b/01.tex
@@ -65,7 +65,7 @@
 
 \section{本研究の目的}
 
-既存の録音システムに見られる不便を解消し，音声活用を促すシステムを開発することが本研究の目的である．
+既存の録音システムの不便を解消し，音声活用を促す録音システムを開発することが本研究の目的である．
 
 \section{本論文の構成}
 
