--- a/06.tex
+++ b/06.tex
@@ -6,14 +6,14 @@
 \newpage
 
 既存の録音システムの問題を明らかにし，新しい録音システム「Gyaon」を設計/開発した．
-そして，Gyaonの設計指針である
+そして，以下のGyaonの設計指針
 
 \begin{itemize}
 \item 単純な録音操作
-\item 音声管理の簡単さ
+\item 再生/管理の簡単さ
 \item 他システムからの音声の利用のしやすさ
 \end{itemize}
 
 が録音機の不便を解消し，音声活用を促すことが明らかになった．
 
-今後は，さらなる音声活用法の探求と録音機能の拡充を行っていきたい．
+今後は，さらなる音声活用法の探求と録音機能の拡充を行っていきたい．また，他メディアとの連携機能を充実させていきたい.
