--- a/main.bib
+++ b/main.bib
@@ -52,8 +52,7 @@ keywords = {Memex, annotation, database, hypermedia, multimedia},
 @inproceedings{Stifelman,
 author = {Stifelman, Lisa and Arons, Barry and Schmandt, Chris},
 title = {The Audio Notebook: Paper and Pen Interaction with Structured Speech},
-booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
-series = {CHI '01},
+booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems(CHI '01)},
 year = {2001},
 isbn = {1-58113-327-8},
 location = {Seattle, Washington, USA},
