--- a/04.tex
+++ b/04.tex
@@ -1,7 +1,7 @@
 \chapter{実運用および評価}
 \label{chap:evaluation}
 
-本章では，Gyaonを実運用した結果および評価について述べる．
+本章では，2016年6月から約半年に渡りGyaonを実運用した結果および評価について述べる．
 
 \newpage
 
