--- a/05.tex
+++ b/05.tex
@@ -5,39 +5,60 @@
 
 \newpage
 
-日常的な体験や雰囲気を記録するための録音デバイスについて研究が行われている\cite{Poupyrev}．
+%\section{Gyaonシステムの有用性}
+
+\section{既存の音声活用システムとの比較}
+
+% かなり強引な比較
+
+Poupyrevらは，日常的な体験や雰囲気を記録するための録音デバイスについて研究を行っている\cite{Poupyrev}．
 録音は何かを記録，説明したり，思い出すのに重要な手段だが，日常的に行っている人は少ないと指摘されている．
 より気軽に録音できるよう日用品にセンサーを埋め込み，状況の変化に応じて録音/再生するデバイスが提案されている．
 日用品に溶け込み，単純明快な録音/再生インターフェースが実現されているが，
 本を閉じる/開くといった二値的な状況変化でしか操作できないため，
 デバイス単体で複数の音声を管理することが困難になっている．
 
-人間生活に関わる情報を長期間にわたり記録するライフログ関連研究では，
-そのログの一部として音声データがよく利用されている\cite{Bell}．
-音声データの特徴量を計算し，閾値処理するインターフェースを提供することで再生区間を決定する手法\cite{Kawamura}や，
-講義ノートといった手書きメモに対して音声データを関連付ける手法\cite{Stifelman}などが提案されている．
+Gyaonの利用にはPCやスマートフォンが必要であるが，単純な操作で録音/再生が行えるだけでなく，音声の管理も快適に行える．
 
-研究ノートの補助的な記録手段として音声データを利用するシステムが提案されている\cite{Kawanishi}．
-事前に用意された研究ノートから形態素解析などを利用してキーワードを抽出し，音声データに付与する手法がとられている．
+\vspace{0.25in}
 
-また，音声データの特定のタイミングにタグを付与できる録音システムが開発されている\cite{Fujisaka}．
-学生がノートテイキングの補助として使うことを想定しており，重要な説明等を逃さないよう素早くタグ付けが行えるインターフェースが実装されている．
+Bellらは人間生活に関わる情報を長期間にわたり記録するライフログ関連研究を行っている\cite{Bell}が，
+そのログの一部として音声データがよく利用されている．
+河村らは音声データの特徴量を計算し，閾値処理するインターフェースを提供することで再生区間を決定する手法を提案している\cite{Kawamura}．
+Stifelmanらは講義ノートといった手書きメモに対して音声データを関連付ける手法を提案している\cite{Stifelman}．
 
-音声認識技術を活用したテキストによる音声検索手法が提案されている\cite{Vemuri}．
+川西らは，研究ノートの補助的な記録手段として音声データを利用するシステムを提案している\cite{Kawanishi}．
+事前に用意された研究ノートから形態素解析などを利用してキーワードを抽出し，音声データに付与する手法が取られている．
+
+また，藤坂は音声データの特定のタイミングにタグを付与できる録音システムを開発している\cite{Fujisaka}．
+学生がノートテイキングの補助として使うことを想定しており，
+重要な説明等を逃さないよう素早くタグ付けが行えるインターフェースが実装されている．
+
+Vemuriらは，音声認識技術を活用したテキストによる音声検索手法を提案している\cite{Vemuri}．
 試作されたアプリケーションでは音声データに含まれる単語からキーワード検索が可能となっているほか，
 音声認識の信頼度を文字色に反映させたり，ストップワードを見えにくくするなどして
 ユーザが録音の要点を思い出しやすくなるよう配慮されている．
 
-写真と音声を組み合わせによる体験記録手法が提案されている\cite{Nakakura}．
+Gyaonでは長時間の音声を探索することは困難だが，単純な録音操作によって必要な箇所のみ記録できる．
+また再生やコメント編集も簡単であることから，実質的に同様のことが実現できると思われる．
+
+\vspace{0.25in}
+
+中蔵らは，写真と音声を組み合わせによる体験記録手法を提案している\cite{Nakakura}．
 写真と手書きだけでは表現できない雰囲気を音声に記録し，
 写真によって音声データに一覧性を持たせる仕組みである．
 写真が音声の内容把握を助け，音声データの価値を高めることも確認されている．
+また，増井は同様の手法によって撮影された写真を，音声とともに閲覧できるWebサイトを公開している\cite{Masui}．
 
-また，同様の手法によって撮影された写真を，音声とともに閲覧できるWebサイトが公開されている\cite{Masui}．
+Gyaonシステム内で他メディアと組み合わせた活用はできないが，
+Wikiの用途ではScrapboxで同様のシステムを実現できる．
+今後はGyaon自体に他メディアとの連携機能を充実させていきたい．
 
 \section{プライバシー問題}
-簡単に録音できるため他者に対するプライバシー侵害の可能性があり，
+ライフログとして音声を利用する録音システムでは，
+外界の情報を積極的に記録することから他者に対するプライバシー侵害の可能性があり，
 社会で導入されることに対する心理的障壁は非常に高いと考えられる\cite{Kawamura}．
+Gyaonでもそのような使途が想定されるため，何らかの対策が必要かもしれない．
 
 また，現在のGyaonシステムでは全ての音声が公開されており，誰でもアクセス可能である．
 正式なサービスとして運用する場合は，アカウント管理や閲覧権限の対策が必要である．
